// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WikiMarkup => ADF Formatters - monospace should detect monospace mark and ignoring the invalid closing symbol 1`] = `
Object {
  "content": Array [
    Object {
      "content": Array [
        Object {
          "text": "This is a ",
          "type": "text",
        },
        Object {
          "marks": Array [
            Object {
              "type": "code",
            },
          ],
          "text": "monospace}}monospace",
          "type": "text",
        },
        Object {
          "text": " text",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`WikiMarkup => ADF Formatters - monospace should detect monospace mark at beginning of the line 1`] = `
Object {
  "content": Array [
    Object {
      "content": Array [
        Object {
          "marks": Array [
            Object {
              "type": "code",
            },
          ],
          "text": "monospace",
          "type": "text",
        },
        Object {
          "text": " text",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`WikiMarkup => ADF Formatters - monospace should detect monospace mark at end of the input 1`] = `
Object {
  "content": Array [
    Object {
      "content": Array [
        Object {
          "text": "This is a ",
          "type": "text",
        },
        Object {
          "marks": Array [
            Object {
              "type": "code",
            },
          ],
          "text": "monospace",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`WikiMarkup => ADF Formatters - monospace should detect monospace mark at end of the line 1`] = `
Object {
  "content": Array [
    Object {
      "content": Array [
        Object {
          "text": "This is a ",
          "type": "text",
        },
        Object {
          "marks": Array [
            Object {
              "type": "code",
            },
          ],
          "text": "monospace",
          "type": "text",
        },
        Object {
          "type": "hardBreak",
        },
        Object {
          "text": "another line",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`WikiMarkup => ADF Formatters - monospace should detect monospace mark at in between of the line 1`] = `
Object {
  "content": Array [
    Object {
      "content": Array [
        Object {
          "text": "This is a ",
          "type": "text",
        },
        Object {
          "marks": Array [
            Object {
              "type": "code",
            },
          ],
          "text": "monospace",
          "type": "text",
        },
        Object {
          "text": " text",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`WikiMarkup => ADF Formatters - monospace should detect monospace mark surrounded by non alphanumeric characters 1`] = `
Object {
  "content": Array [
    Object {
      "content": Array [
        Object {
          "text": "This is a (",
          "type": "text",
        },
        Object {
          "marks": Array [
            Object {
              "type": "code",
            },
          ],
          "text": "monospace",
          "type": "text",
        },
        Object {
          "text": ") text",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`WikiMarkup => ADF Formatters - monospace should detect monospace mark with a table inside, but not render as a table 1`] = `
Object {
  "content": Array [
    Object {
      "content": Array [
        Object {
          "marks": Array [
            Object {
              "type": "code",
            },
          ],
          "text": "|this|is|a|table|",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`WikiMarkup => ADF Formatters - monospace should not be a monospace mark if it is escaped 1`] = `
Object {
  "content": Array [
    Object {
      "content": Array [
        Object {
          "text": "This is not a {{monospace}} text",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`WikiMarkup => ADF Formatters - monospace should not be a monospace mark if surrounded by non-latin characters 1`] = `
Object {
  "content": Array [
    Object {
      "content": Array [
        Object {
          "text": "This is not a 牛{{monospace}}牛 text",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`WikiMarkup => ADF Formatters - monospace should not be a monospace mark if there is a space after opening {{ 1`] = `
Object {
  "content": Array [
    Object {
      "content": Array [
        Object {
          "text": "This is not a {{ monospace}} text",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`WikiMarkup => ADF Formatters - monospace should not be a monospace mark if there is a space before closing }} 1`] = `
Object {
  "content": Array [
    Object {
      "content": Array [
        Object {
          "text": "This is not a {{monospace }} text",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`WikiMarkup => ADF Formatters - monospace should not be a monospace mark if there is no space before {{ 1`] = `
Object {
  "content": Array [
    Object {
      "content": Array [
        Object {
          "text": "This is not a{{monospace}} text",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`WikiMarkup => ADF Formatters - monospace should not be a monospace mark if there is not a space after closing }} 1`] = `
Object {
  "content": Array [
    Object {
      "content": Array [
        Object {
          "text": "This is not a {{monospace}}text",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;
